# projetos_dnc

desafio1_modelo_previsao/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
desafio1_modelo_previsao/notebooks/: eda.ipynb
desafio1_modelo_previsao/src/data/: load_data.py  preprocessing.py
desafio1_modelo_previsao/src/model/: predict.py  train.py
desafio5_data_wrangling/: makefile  pyproject.toml  setup.cfg
desafio5_data_wrangling/notebooks/: eda.ipynb
desafio5_data_wrangling/src/config/: logging_config.py
desafio5_data_wrangling/src/data/: load_data.py  processing.py  visualize.py
