[tool.poetry]
name = "project_name"
version = "0.0.1"
description = "Projeto para construção de um modelo de previsão usando dados."
authors = ["Eder Ray da Silva Francisco"]
license = "MIT"
readme = "README.md"
packages = [{ include = "project_name" }]
# ou: package-mode = false, se não for empacotar como lib

[tool.poetry.dependencies]
python = "~3.11"
holidays = "^0.76"
pandas = "^2.3.1"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/ 
'''

[tool.isort]
profile = "black"
known_first_party = ["project_name"]
force_sort_within_sections = true
